--- a/src/App.scss
+++ b/src/App.scss
@@ -5,7 +5,7 @@
   max-width: 1200px;
   min-height: 100vh;
   margin: 0 auto;
-  padding: 0 16px;
+  padding: 0 0px;
   display: flex;
   flex-direction: column;
   box-sizing: content-box;
@@ -13,10 +13,10 @@
 
 main {
   flex: 1;
-  padding: 30px 0 60px;
+  padding: 0px 0 0px;
   position: relative; // for loaders
 }
 
 body {
-  background: $bgColor url(assets/images/bg.svg);
+  background: #282828 url(assets/images/bg.svg);
 }
