--- a/src/components/layout/header/Header.module.scss
+++ b/src/components/layout/header/Header.module.scss
@@ -1,6 +1,31 @@
+@import '../../../styles/variables.scss';
+
 .header {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 25px 0;
+  padding: 10px 20px;
+  background-color: $primary-color;
+  color: white;
+
+  .logo {
+    font-size: 24px;
+    font-weight: bold;
+  }
+
+  nav {
+    a {
+      margin: 0 10px;
+      color: white;
+      text-decoration: none;
+    }
+  }
+
+  .wallet-button {
+    background-color: $primary-color;
+    border: 1px solid white;
+    color: white;
+    padding: 5px 10px;
+    cursor: pointer;
+  }
 }
