update to Demo day.

--- a/src/components/proposalDashboard/ProposalDashboard.module.scss
+++ b/src/components/proposalDashboard/ProposalDashboard.module.scss
@@ -138,6 +138,13 @@
       display: inline-block;
     }
 
+    .statusActived {
+      color: #01a021;
+      font-weight: bold;
+      margin-bottom: 10px;
+      display: inline-block;
+    }
+
     h3 {
       color: $dark-text-color;
       font-size: 18px;
