--- a/src/components/proposalDetail/ProposalDetail.module.scss
+++ b/src/components/proposalDetail/ProposalDetail.module.scss
@@ -57,6 +57,12 @@
     margin-bottom: 15px;
   }
 
+  .proposalActived {
+    color: darkgreen;
+    font-weight: bold;
+    margin-bottom: 15px;
+  }
+
   .votingBreakdown {
     display: flex;
     margin-bottom: 15px;
